--- a/.github/workflows/nodejs-cicd.yml
+++ b/.github/workflows/nodejs-cicd.yml
@@ -6,11 +6,10 @@ permissions:
 
 on:
   push:
-    branches: [ "test" ]  # Adjust as needed
+    branches: [ "test" ]
 
 jobs:
 
-  # 1. Compile Job
   compile:
     runs-on: ec2-hosted
     steps:
@@ -21,7 +20,6 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-  # 2. Security Check Job (Trivy + Gitleaks)
   security-check:
     runs-on: ec2-hosted
     needs: compile
@@ -34,7 +32,6 @@ jobs:
         run: |
           docker run --rm -v $(pwd):/app zricethezav/gitleaks:latest detect --source=/app --report-format=json --report-path=/app/gitleaks-report.json
 
-  # 3. Test Job
   test:
     runs-on: ec2-hosted
     needs: security-check
@@ -48,7 +45,6 @@ jobs:
       - name: Run Unit Tests
         run: npm test
 
-  # 4. SonarQube Scan
   sonar_scan:
     runs-on: ec2-hosted
     needs: test
@@ -64,11 +60,11 @@ jobs:
           role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
 
       - name: Get secrets from AWS Secrets Manager
-        id: pipeline_secrets
+        id: nodejs_secret
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: |
-            pipeline_secrets:arn:aws:secretsmanager:ap-southeast-1:634277304418:secret:nodejs_github_actions-NGJETp
+            nodejs_secret:arn:aws:secretsmanager:ap-southeast-1:634277304418:secret:nodejs_github_actions-NGJETp
           parse-json-secrets: true
 
       - name: SonarQube Scan
@@ -76,8 +72,8 @@ jobs:
         with:
           projectBaseDir: .
         env:
-          SONAR_TOKEN: ${{ steps.pipeline_secrets.outputs.pipeline_secrets_SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ steps.pipeline_secrets.outputs.pipeline_secrets_SONAR_HOST_URL }}
+          SONAR_TOKEN: ${{ steps.nodejs_secret.outputs.nodejs_secret_SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ steps.nodejs_secret.outputs.nodejs_secret_SONAR_HOST_URL }}
 
       - name: Install jq
         run: |
@@ -90,10 +86,9 @@ jobs:
         with:
           pollingTimeoutSec: 600
         env:
-          SONAR_TOKEN: ${{ steps.pipeline_secrets.outputs.pipeline_secrets_SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ steps.pipeline_secrets.outputs.pipeline_secrets_SONAR_HOST_URL }}
+          SONAR_TOKEN: ${{ steps.nodejs_secret.outputs.nodejs_secret_SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ steps.nodejs_secret.outputs.nodejs_secret_SONAR_HOST_URL }}
 
-  # 5. Docker Build and Push
   docker_build_and_push:
     runs-on: ec2-hosted
     needs: sonar_scan
@@ -107,34 +102,33 @@ jobs:
           role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
 
       - name: Get secrets from AWS Secrets Manager
-        id: pipeline_secrets
+        id: nodejs_secret
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: |
-            pipeline_secrets:arn:aws:secretsmanager:ap-southeast-1:634277304418:secret:nodejs_github_actions-NGJETp
+            nodejs_secret:arn:aws:secretsmanager:ap-southeast-1:634277304418:secret:nodejs_github_actions-NGJETp
           parse-json-secrets: true
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          username: ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}
-          password: ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_TOKEN }}
+          username: ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}
+          password: ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_TOKEN }}
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest .
-          docker tag ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
+          docker build -t ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest .
+          docker tag ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
 
       - name: Trivy Image Scan
         run: |
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
 
       - name: Push Docker Image
         run: |
-          docker push ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
-          docker push ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
+          docker push ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+          docker push ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
 
-  # 6. Deploy to EC2
   deploy_to_ec2:
     runs-on: ubuntu-latest
     needs: docker_build_and_push
@@ -146,11 +140,11 @@ jobs:
           role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
 
       - name: Get secrets from AWS Secrets Manager
-        id: pipeline_secrets
+        id: nodejs_secret
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: |
-            pipeline_secrets:arn:aws:secretsmanager:ap-southeast-1:634277304418:secret:nodejs_github_actions-NGJETp
+            nodejs_secret:arn:aws:secretsmanager:ap-southeast-1:634277304418:secret:nodejs_github_actions-NGJETp
           parse-json-secrets: true
 
       - name: Setup SSH key
@@ -162,8 +156,8 @@ jobs:
       - name: Deploy via SSH
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_IP }} "
-            docker pull ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+            docker pull ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
             docker stop nodeapp || true && docker rm nodeapp || true
             docker run -d -p 3000:3000 --restart unless-stopped --name nodeapp \
-              ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+              ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
           "
