--- a/.github/workflows/nodejs-cicd.yml
+++ b/.github/workflows/nodejs-cicd.yml
@@ -60,7 +60,6 @@ jobs:
           role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
 
       - name: Get secrets from AWS Secrets Manager
-        id: nodejs_secret
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: nodejs_github_actions
@@ -71,8 +70,8 @@ jobs:
         with:
           projectBaseDir: .
         env:
-          SONAR_TOKEN: ${{ steps.nodejs_secret.outputs.nodejs_secret_SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ steps.nodejs_secret.outputs.nodejs_secret_SONAR_HOST_URL }}
+          SONAR_TOKEN: ${{ env.NODEJS_GITHUB_ACTIONS_SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ env.NODEJS_GITHUB_ACTIONS_SONAR_HOST_URL }}
 
       - name: Install jq
         run: |
@@ -85,8 +84,8 @@ jobs:
         with:
           pollingTimeoutSec: 600
         env:
-          SONAR_TOKEN: ${{ steps.nodejs_secret.outputs.nodejs_secret_SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ steps.nodejs_secret.outputs.nodejs_secret_SONAR_HOST_URL }}
+          SONAR_TOKEN: ${{ env.NODEJS_GITHUB_ACTIONS_SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ env.NODEJS_GITHUB_ACTIONS_SONAR_HOST_URL }}
 
   docker_build_and_push:
     runs-on: ec2-hosted
@@ -101,7 +100,6 @@ jobs:
           role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
 
       - name: Get secrets from AWS Secrets Manager
-        id: nodejs_secret
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: nodejs_github_actions
@@ -110,22 +108,22 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          username: ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}
-          password: ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_TOKEN }}
+          username: ${{ env.NODEJS_GITHUB_ACTIONS_DOCKERHUB_USERNAME }}
+          password: ${{ env.NODEJS_GITHUB_ACTIONS_DOCKERHUB_TOKEN }}
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest .
-          docker tag ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
+          docker build -t ${{ env.NODEJS_GITHUB_ACTIONS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest .
+          docker tag ${{ env.NODEJS_GITHUB_ACTIONS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest ${{ env.NODEJS_GITHUB_ACTIONS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
 
       - name: Trivy Image Scan
         run: |
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image ${{ env.NODEJS_GITHUB_ACTIONS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
 
       - name: Push Docker Image
         run: |
-          docker push ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
-          docker push ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
+          docker push ${{ env.NODEJS_GITHUB_ACTIONS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+          docker push ${{ env.NODEJS_GITHUB_ACTIONS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
 
   deploy_to_ec2:
     runs-on: ubuntu-latest
@@ -138,7 +136,6 @@ jobs:
           role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
 
       - name: Get secrets from AWS Secrets Manager
-        id: nodejs_secret
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: nodejs_github_actions
@@ -153,8 +150,8 @@ jobs:
       - name: Deploy via SSH
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_IP }} "
-            docker pull ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+            docker pull ${{ env.NODEJS_GITHUB_ACTIONS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
             docker stop nodeapp || true && docker rm nodeapp || true
             docker run -d -p 3000:3000 --restart unless-stopped --name nodeapp \
-              ${{ steps.nodejs_secret.outputs.nodejs_secret_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+              ${{ env.NODEJS_GITHUB_ACTIONS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
           "
