--- a/.github/workflows/togarindrbranch.yml
+++ b/.github/workflows/togarindrbranch.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline..
+name: CI/CD Pipeline
 
 on:
   push:
@@ -31,6 +31,8 @@ jobs:
   docker_build_and_push:
     runs-on: self-hosted
     needs: test
+    env:
+      IMAGE_NAME: "${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GAR_REPO }}/nodejs-cicd-app"
     steps:
       - uses: actions/checkout@v4
 
@@ -41,39 +43,39 @@ jobs:
           source .env
           set +a
 
+      - name: Check Docker Access
+        run: |
+          whoami
+          groups
+          docker ps || echo "Docker access failed"
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Authenticate to Google Cloud
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
-          GCP_REGION: ${{ secrets.GCP_REGION }}
         run: |
           echo "$GCP_SA_KEY" | base64 --decode > gcp-key.json 2>/dev/null || echo "$GCP_SA_KEY" > gcp-key.json
           gcloud auth activate-service-account --key-file=gcp-key.json
-          gcloud auth configure-docker "$GCP_REGION-docker.pkg.dev" --quiet
+          gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
 
       - name: Build and Push Docker Image
-        env:
-          GCP_REGION: ${{ secrets.GCP_REGION }}
-          GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-          GAR_REPO: ${{ secrets.GAR_REPO }}
         run: |
-          IMAGE_URI="$GCP_REGION-docker.pkg.dev/$GCP_PROJECT_ID/$GAR_REPO/nodejs-cicd-app"
-          docker buildx build --push -t $IMAGE_URI:latest -t $IMAGE_URI:${{ github.sha }} .
+          docker buildx build --push \
+            -t $IMAGE_NAME:latest \
+            -t $IMAGE_NAME:${{ github.sha }} .
 
       - name: Trivy Image Scan
-        env:
-          GCP_REGION: ${{ secrets.GCP_REGION }}
-          GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-          GAR_REPO: ${{ secrets.GAR_REPO }}
         run: |
-          IMAGE_URI="$GCP_REGION-docker.pkg.dev/$GCP_PROJECT_ID/$GAR_REPO/nodejs-cicd-app"
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image $IMAGE_URI:latest
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
+            aquasec/trivy image $IMAGE_NAME:latest
 
   deploy_to_local:
     runs-on: self-hosted
     needs: docker_build_and_push
+    env:
+      IMAGE_NAME: "${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GAR_REPO }}/nodejs-cicd-app"
     steps:
       - name: Stop Existing Container (if any)
         run: |
@@ -81,22 +83,11 @@ jobs:
           docker stop nodeapp && docker rm nodeapp || echo "No container to stop"
 
       - name: Pull Latest Docker Image
-        env:
-          GCP_REGION: ${{ secrets.GCP_REGION }}
-          GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-          GAR_REPO: ${{ secrets.GAR_REPO }}
-        run: |
-          IMAGE_URI="$GCP_REGION-docker.pkg.dev/$GCP_PROJECT_ID/$GAR_REPO/nodejs-cicd-app"
-          docker pull $IMAGE_URI:latest
+        run: docker pull $IMAGE_NAME:latest
 
       - name: Run New Container with Restart Policy
-        env:
-          GCP_REGION: ${{ secrets.GCP_REGION }}
-          GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-          GAR_REPO: ${{ secrets.GAR_REPO }}
         run: |
-          IMAGE_URI="$GCP_REGION-docker.pkg.dev/$GCP_PROJECT_ID/$GAR_REPO/nodejs-cicd-app"
           docker run -d -p 80:3000 \
             --restart unless-stopped \
             --name nodeapp \
-            $IMAGE_URI:latest
+            $IMAGE_NAME:latest
