--- a/.github/workflows/togarindrbranch.yml
+++ b/.github/workflows/togarindrbranch.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline 122
 
 on:
   push:
@@ -43,15 +43,6 @@ jobs:
           source .env
           set +a
 
-      - name: Check Docker Access
-        run: |
-          whoami
-          groups
-          docker ps || echo "Docker access failed"
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Authenticate to Google Cloud
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
@@ -60,16 +51,20 @@ jobs:
           gcloud auth activate-service-account --key-file=gcp-key.json
           gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
 
-      - name: Build and Push Docker Image
+      - name: Build Docker Image
         run: |
-          docker buildx build --push \
-            -t $IMAGE_NAME:latest \
-            -t $IMAGE_NAME:${{ github.sha }} .
+          docker build -t $IMAGE_NAME:latest .
+          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ github.sha }}
 
       - name: Trivy Image Scan
         run: |
           docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
             aquasec/trivy image $IMAGE_NAME:latest
+
+      - name: Push Docker Image
+        run: |
+          docker push $IMAGE_NAME:latest
+          docker push $IMAGE_NAME:${{ github.sha }}
 
   deploy_to_local:
     runs-on: self-hosted
@@ -85,7 +80,7 @@ jobs:
       - name: Pull Latest Docker Image
         run: docker pull $IMAGE_NAME:latest
 
-      - name: Run New Container with Restart Policy
+      - name: Run New Container
         run: |
           docker run -d -p 80:3000 \
             --restart unless-stopped \
