--- a/.github/workflows/togarindrbranch.yml
+++ b/.github/workflows/togarindrbranch.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline 122
+name: CI/CD Pipeline
 
 on:
   push:
@@ -47,7 +47,7 @@ jobs:
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
         run: |
-          echo "$GCP_SA_KEY" | base64 --decode > gcp-key.json 2>/dev/null || echo "$GCP_SA_KEY" > gcp-key.json
+          printf "%s" "$GCP_SA_KEY" | base64 --decode > gcp-key.json 2>/dev/null || printf "%s" "$GCP_SA_KEY" > gcp-key.json
           gcloud auth activate-service-account --key-file=gcp-key.json
           gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
 
