--- a/.github/workflows/togarindrbranch.yml
+++ b/.github/workflows/togarindrbranch.yml
@@ -47,7 +47,9 @@ jobs:
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
         run: |
-          echo "$GCP_SA_KEY" > gcp-key.json
+          cat <<EOF > gcp-key.json
+          $GCP_SA_KEY
+          EOF
           gcloud auth activate-service-account --key-file=gcp-key.json
           gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
 
